# LabManager

./: .gitignore  README.md  part_leader_workcraft_mvp.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  requirements-dev.txt  requirements.txt  run.ps1
backend/alembic/: env.py
backend/alembic/versions/: 17442b2eb4c7_initial_schema.py  5ee31551c527_add_pulse_responses.py  64e0e90650ca_add_assessments_table.py  68ee8b161839_add_team_agreements.py  a15567e4b094_add_collab_reflections.py  b9d100dd1e50_add_kudos.py  d911bd54b0a7_add_decisions.py
backend/app/: main.py
backend/app/api/: admin.py  agreements.py  assessments.py  auth.py  decisions.py  deps.py  kudos.py  leader.py  pulse.py  reflections.py  reports.py  survey.py  templates.py  workcraft.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: agreement.py  assessment.py  decision.py  kudos.py  pulse.py  reflection.py  survey.py  user.py  (+1 more)
backend/cpp/: CMakeLists.txt  setup.py
backend/cpp/birkman_calc/: bindings.cpp  calculator.cpp  calculator.h
backend/data/: users.yaml
backend/tests/: conftest.py  test_agreements.py  test_assessments.py  test_auth.py  test_decisions.py  test_kudos.py  test_leader_growth.py  test_pulse.py  test_reflections.py  test_workcraft.py
docs/: IMPROVEMENT_PLAN.md  WORKCRAFT_STUDIO_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
lat.md/: architecture.md  assessments.md  birkman.md  overview.md  security.md  status.md  tests.md  workcraft.md
(+53 files in other folders)
